backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"algoarena-backend","namespace":"algoarena"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"algoarena-backend"}},"template":{"metadata":{"labels":{"app":"algoarena-backend"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"algoarena-backend-config"}},{"secretRef":{"name":"algoarena-backend-secrets"}}],"image":"salemdiber/algo-arena-backend:26","imagePullPolicy":"IfNotPresent","livenessProbe": [...]
  creationTimestamp: "2026-05-04T08:26:57Z"
  generation: 3
  name: algoarena-backend
  namespace: algoarena
  resourceVersion: "23121"
  uid: 9fe53abf-2bee-4f8a-814a-d9d88b2b9cc8
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: algoarena-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
  metadata:
    labels:
      app: algoarena-backend

  spec:
    containers:
      - name: backend
        image: salemdiber/algo-arena-backend:26
        imagePullPolicy: IfNotPresent

        ports:
          - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /system-health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /system-health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10

        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi

        volumeMounts:
          - mountPath: /app/uploads
            name: uploads

    volumes:
      - name: uploads
        emptyDir: {}
        name: uploads
status:
  conditions:
  - lastTransitionTime: "2026-05-04T08:26:57Z"
    lastUpdateTime: "2026-05-04T08:26:57Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-05-04T13:30:29Z"
    lastUpdateTime: "2026-05-04T13:30:30Z"
    message: ReplicaSet "algoarena-backend-65578b8d9f" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 3
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 1
