04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: algoarena-frontend
  namespace: algoarena
spec:
  replicas: 4
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: algoarena-frontend
  template:
    metadata:
      labels:
        app: algoarena-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master
      containers:
        - name: frontend
          image: salemdiber/algo-arena-frontend:39
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
              ephemeral-storage: 512Mi
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: algoarena-frontend
  namespace: algoarena
spec:
  type: ClusterIP
  selector:
    app: algoarena-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
